# semantic_search

./: .gitignore  MovieDataVectorIndexInitializer.py  MoviePlotDataInitializer.py  main.py  pyproject.toml
config/: Settings.py
data/: MovieService.py
data/test/: MoviePlotSemanticSearchTest.py
mongo/: MongoConnector.py
mongo/test/: MongoConnectorTest.py
transformer/: DataTransformer.py  SentenceTransformer.py
transformer/test/: DataTransformerTest.py
