[tool.poetry]
name = "sementic-search"
version = "0.1.0"
description = ""
authors = ["donggyukim <zeedoutladzz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.5.0"
pydantic = "^2.3.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
requests = "^2.31.0"
sentence-transformers = "^2.2.2"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

